# pb2019

./: ANDROID_SETUP.md  CLAUDE.md  DPB_IMPROVEMENTS.md  FEAST_TRANSFER_DEMO.md  HIGHLIGHTING_IMPROVEMENTS_SUMMARY.md  local.properties  package-lock.json  package.json  serve.sh  settings.gradle.kts  svelte.config.js  test-feast-simple.cjs  test-feast-transfers.js  test-jan-feasts.cjs  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
.zed/: README.md  format-psalm.cjs  tasks.json
app/: build.gradle.kts
docs/: CONTEXT_PERSISTENCE.md  DPB_CONTINUATION_MIGRATION.md  DPB_LINTER.md  QUICK_REFERENCE.md  TEMPLATE_EXAMPLES.md  TEMPLATE_SYSTEM.md  TEMPLATE_SYSTEM_SUMMARY.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: QUICKSTART.md  README.md  add-psalm.cjs  build-antiphons-json.cjs  build-canticles-json.cjs  build-collects-json.cjs  build-opening-sentences-json.cjs  build-service-pages.cjs  bulk-import-psalms.cjs  check-canticles.sh  check-tmp-issues.cjs  clean-asterisks.cjs  convert-bible-xml.cjs  convert-collects-to-dpb.cjs  convert-json-to-dpb.cjs  convert-raw-to-json.cjs  export-to-normalized.cjs  find-missing-pages.cjs  import-psalm-from-text.cjs  lint-dpb.cjs  migrate-dpb-to-whitespace.cjs  parse-daily-lectionary.cjs  rebuild-outdated.sh  test-page-links.cjs  test-psalm-db.cjs  validate-raw-format.cjs  watch-dpb.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +layout.svelte  +page.svelte
zed-dpb-extension/: README.md  extension.toml
zed-dpb-extension/grammars/: dpb.json  (+1 more)
(+1354 files in other folders)
