[package]
name = "pb2019"
version = "0.0.1"
description = "Prayer Book 2019"
authors = ["you"]
edition = "2021"

[lib]
name = "pb2019_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
